UI updated with extractive model

--- a/summarizer/templates/index.html
+++ b/summarizer/templates/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <div style="text-align: center; margin-top: 20px;">
-        <p style="font-size: 16px; color: #666;">Text summarizer developed by AI/ML Interns @ Infosys Springboard.</p>
+        <p style="font-size: 16px; color: #666;">Text summarizer developed by GROUP 4 - AI/ML Interns @ Infosys Springboard.</p>
     </div>
     
    
